--- a/lib/generators/versioned_database_functions/aggregate/templates/db/migrate/create_aggregate.erb
+++ b/lib/generators/versioned_database_functions/aggregate/templates/db/migrate/create_aggregate.erb
@@ -1,5 +1,5 @@
 class <%= migration_class_name %> < <%= activerecord_migration_class %>
   def change
-    create_view <%= formatted_plural_name %><%= ", materialized: true" if materialized? %>
+    create_aggregate <%= formatted_name %>, arguments: <%= arguments.inspect %>
   end
 end
